back-deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-docker-deployment
  labels:
    app: spring-boot-docker
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: spring-boot-docker
  strategy: {}
  template:
    metadata:
      labels:
        app: spring-boot-docker
    spec:
      containers:
      - image: hojin19082/restful_back:55
        name: restful-back
        ports:
        - containerPort: 8090
        imagePullPolicy: Always
      nodeSelector:
        hostname: hojin-36c4536-zhmvw
