back-deploy/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-react-docker-deployment
  labels:
    app: nginx-react-docker
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: nginx-react-docker
  strategy: {}
  template:
    metadata:
      labels:
        app: nginx-react-docker
    spec:
      containers:
      - image: hojin19082/restful_front:21
        name: restful-front
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
