back-deploy/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-docker-deployment
  labels:
    app: mysql-docker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-docker
  template:
    metadata:
      labels:
        app: mysql-docker
    spec:
      containers:
        - name: mysql-docker
          image: mysql:8.0 # mysql docker image
          ports:
            - containerPort: 3306
