back-deploy/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-react-docker-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx-react-docker-service
