back-deploy/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-docker-service 
spec:
  selector:
    app: mysql-docker 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3306
