back-deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-docker-service
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: spring-boot-docker
