back-deploy/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: comfy-ingress
    namespace: test
    annotations:
      kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: spring-boot-docker-service
            servicePort: 80
